# AgenticAi

./: .gitignore  README.md  pyproject.toml  requirements.txt
Embeddings/: HuggingFaceEmbedding.ipynb  OllamaEmbedding.ipynb  OpenAIEmbeddings.ipynb
Ingestion/: DataIngestion.ipynb
LCEL/: Basic Chatbot.ipynb  notebook.ipynb  service.py
LangGraph/: Chatbot.ipynb  LanggraphChains.ipynb  ReAct.ipynb  StateSchema.ipynb  Streaming.ipynb  ToolIntegration.ipynb  pydantic.ipynb  simpleGraph.ipynb
Langchain/: Streaming.ipynb  Tools.ipynb  basics.ipynb  messages.ipynb  middleware.ipynb  modelIntegration.ipynb  outputStructure.ipynb
Transform/: HTMLtextSplitter.ipynb  RecursiveJsonSplitter.ipynb  TextSplitter.ipynb  characterSplitter.ipynb
Workflows/: parallelization.ipynb  prompt_chaining.ipynb  routing.ipynb
vector_store/: Chroma.ipynb  FAISS.ipynb  vectorRetriever.ipynb
