[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=3.0.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "duckdb>=1.5.2",
    "duckduckgo-search==5.3.1b1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "huggingface-hub>=1.13.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langserve>=0.3.3",
    "mysql-connector-python>=9.7.0",
    "numexpr>=2.14.1",
    "openai>=2.34.0",
    "pandas>=3.0.2",
    "pymupdf==1.23.26",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.4.4",
    "unstructured>=0.22.27",
    "uvicorn>=0.46.0",
    "validators==0.28.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]
